--- a/FRONTEND/photoDrop/src/styles/AllPosts.css
+++ b/FRONTEND/photoDrop/src/styles/AllPosts.css
@@ -4,5 +4,5 @@ main{
     flex-wrap: wrap;
     width: 100%;
     overflow-y: scroll;
-    background-color: firebrick;
+    background-color: rgb(239, 234, 229);
 }
