--- a/FRONTEND/photoDrop/src/styles/Header.css
+++ b/FRONTEND/photoDrop/src/styles/Header.css
@@ -3,6 +3,8 @@ header{
     display:flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(239, 234, 229);
+    border-bottom: 1px solid rgb(213, 213, 213);
 }
 
 h1{
