--- a/FRONTEND/photoDrop/src/styles/AllPosts.css
+++ b/FRONTEND/photoDrop/src/styles/AllPosts.css
@@ -1,8 +1,12 @@
-main{
-    display:flex;
+main {
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
     overflow-y: scroll;
     background-color: rgb(239, 234, 229);
+}
+
+.cargando{
+    margin-top: 100%;
 }
