--- a/FRONTEND/photoDrop/src/styles/Login.css
+++ b/FRONTEND/photoDrop/src/styles/Login.css
@@ -1,20 +1,54 @@
-h1 {
+.main {
+    background-color: var(--background-color);
+    grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 0.5rem;
+}
+
+.cajetin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.4rem;
+    padding: 10px;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
+}
+
+.login {
+    font-size: 2rem;
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+
+.main a {
+    font-style: italic;
+    color: grey;
+    text-decoration: none;
+}
+
+.olvidado {
+    padding: 0.3rem 0;
+}
+
+.registrate {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
 
-.main {
-    border: 2px solid brown;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 624px;
-    width: 100%;
-}
 
-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
