--- a/FRONTEND/photoDrop/src/styles/Login.css
+++ b/FRONTEND/photoDrop/src/styles/Login.css
@@ -10,12 +10,14 @@
 }
 
 .cajetin {
+    width: 80%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 0.4rem;
-    padding: 10px;
+    padding: 1rem;
     border: 1px solid var(--border-color);
     border-radius: 10px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
@@ -24,6 +26,9 @@
 
 .login {
     font-size: 2rem;
+    text-align: center;
+    width: 100%;
+    height: auto;
 }
 
 .form {
@@ -31,17 +36,24 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 0.3rem;
+    gap: 0.4rem;
+    width: 100%;
+    height: auto;
 }
 
 .main a {
     font-style: italic;
     color: grey;
     text-decoration: none;
+    width: 100%;
+    height: auto;
 }
 
 .olvidado {
+    text-align: center;
     padding: 0.3rem 0;
+    width: 100%;
+    height: auto;
 }
 
 .registrate {
@@ -49,6 +61,68 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    width: 100%;
+    height: auto;
 }
 
+.boton {
+    border-radius: 10px;
+}
 
+.input {
+    border-radius: 10px;
+}
+
+/* MEDIAS */
+
+@media (min-width: 390px) {
+    .cajetin {
+        height: 60%;
+    }
+    .login {
+        font-size: 3rem;
+        padding-bottom: 2rem;
+    }
+    .form {
+        padding-bottom: 1rem;
+    }
+    .input {
+        width: 230px;
+        margin: 0.1rem;
+        padding: 3px 0;
+        font-size: 1rem;
+    }
+    .boton {
+        padding: 3px 7px;
+        font-size: 1rem;
+    }
+    .registrate,
+    main a {
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 820px) {
+    .login {
+        font-size: 3.3rem;
+    }
+    .cajetin {
+        width: 70%;
+    }
+    .input {
+        width: 350px;
+        padding: 3px 0;
+        font-size: 1.2rem;
+    }
+    .boton {
+        font-size: 1.2rem;
+    }
+    .registrate,
+    main a {
+        font-size: 1.4rem;
+    }
+}
+
+@media (min-width: 900px) {
+
+}
