--- a/FRONTEND/photoDrop/src/styles/AllPosts.css
+++ b/FRONTEND/photoDrop/src/styles/AllPosts.css
@@ -4,9 +4,16 @@ main {
     flex-wrap: wrap;
     width: 100%;
     overflow-y: scroll;
-    background-color: rgb(239, 234, 229);
+    background-color: var(--background-color);
 }
 
 .cargando{
     margin-top: 100%;
+}
+
+@media (min-width: 900px) {
+    main {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
 }
