--- a/FRONTEND/photoDrop/src/styles/Header.css
+++ b/FRONTEND/photoDrop/src/styles/Header.css
@@ -3,10 +3,22 @@ header{
     display:flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(239, 234, 229);
-    border-bottom: 1px solid rgb(213, 213, 213);
+    background-color: var(--background-color);
+    border-bottom: 1px solid var(--border-color);
 }
 
 h1{
     font-size: 25px;
+}
+
+@media (min-width: 900px) {
+    header {
+        grid-column: 1/3;
+    }
+}
+
+@media (min-height: 1000px) {
+    h1 {
+        font-size: 40px;
+    }
 }
