--- a/FRONTEND/photoDrop/src/styles/SearchBar.css
+++ b/FRONTEND/photoDrop/src/styles/SearchBar.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--background-color);
-    width: calc(100vw- 2rem);
+    width: 90%;
     margin: 1rem;
     padding: 1rem;
     gap: 0.5rem;
@@ -19,4 +19,10 @@
     width: 100%;
     height: 6vh;
     font-size: 15px;
+}
+
+@media (min-height: 1000px) {
+    .searchBar input {
+        font-size: 25px;
+    }
 }
