--- a/FRONTEND/photoDrop/src/styles/Slider.css
+++ b/FRONTEND/photoDrop/src/styles/Slider.css
@@ -1,72 +1,72 @@
 .slider-container {
-    background-color: rgb(239, 234, 229);
+    background-color: var(--background-color);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .slider {
+}
+
+.slider {
     width: 100%;
     text-align: center;
     overflow: hidden;
     position: relative;
-  }
-  
-  .slides {
+}
+
+.slides {
     display: flex;
     overflow-x: scroll;
     position: relative;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
-  }
-  
-  .slide:nth-of-type(even) {
-    background-color:  rgb(239, 234, 229);
-  }
-  
-  .slide {
+}
+
+.slide:nth-of-type(even) {
+    background-color: var(--background-color);
+}
+
+.slide {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
     width: 100%;
-    height:auto;
+    height: auto;
     scroll-snap-align: center;
     margin-right: 0px;
     box-sizing: border-box;
-    background:  rgb(239, 234, 229);
+    background-color: var(--background-color);
     transform-origin: center center;
     transform: scale(1);
-  }
-    
-  .slide a {
+}
+
+.slide a {
     background: none;
     border: none;
-  }
-  
-  a.slide__prev,
-  .slider::before {
+}
+
+a.slide__prev,
+.slider::before {
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
     left: 5%;
-  }
-  
-  a.slide__next,
-  .slider::after {
+}
+
+a.slide__next,
+.slider::after {
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     right: 5%;
-  }
-  
-  .slider::before,
-  .slider::after {
+}
+
+.slider::before,
+.slider::after {
     content: "";
     z-index: 1;
     background: none;
     pointer-events: none;
-  }
-  
-  .slider__nav {
+}
+
+.slider__nav {
     box-sizing: border-box;
     position: absolute;
     bottom: 5%;
@@ -74,9 +74,9 @@
     width: 200px;
     margin-left: -100px;
     text-align: center;
-  }
-  
-  .postImg {
+}
+
+.postImg {
     width: 100%;
     height: auto;
 }
