--- a/FRONTEND/photoDrop/src/styles/PostCard.css
+++ b/FRONTEND/photoDrop/src/styles/PostCard.css
@@ -20,6 +20,13 @@ section {
     margin-top: 0.5rem;
 }
 
+.first {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
 .userName {
     font-size: 15px;
     font-style: italic;
@@ -97,19 +104,26 @@ section {
 
     .postDate {
         font-size: 12px;
-    }  
+    }
+}
+
+@media (min-width: 900px) {
+    section {
+        width: 50%;
+    }
 }
 
 @media (min-height: 1000px) {
-    section{
+    section {
+        width: 70%;
         margin: 2rem 1rem;
     }
     .userName {
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .postTitle {
-        font-size: 35px;
+        font-size: 25px;
     }
 
     .profilePicture {
@@ -119,7 +133,7 @@ section {
     }
 
     .postDescription {
-        font-size: 25px;
+        font-size: 18px;
     }
 
     .postComments {
@@ -130,18 +144,11 @@ section {
         font-size: 18px;
     }
 
-    .material-symbols-rounded{
+    .material-symbols-rounded {
         font-size: 50px;
     }
 
-    .count{
+    .count {
         font-size: 25px;
-    }
-
-}
-
-@media (min-width: 900px) {
-    section {
-        width: 50%;
     }
 }
