--- a/FRONTEND/photoDrop/src/styles/ValidateEmail.css
+++ b/FRONTEND/photoDrop/src/styles/ValidateEmail.css
@@ -1,10 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
 form {
     overflow: hidden;
@@ -250,4 +245,4 @@ button {
         font-weight: 600;
         margin-top: 20px;
     }
-}
+} */
