--- a/FRONTEND/photoDrop/src/index.css
+++ b/FRONTEND/photoDrop/src/index.css
@@ -25,6 +25,7 @@ body {
 
 .material-symbols-rounded {
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+    cursor: pointer;
 }
 
 img {
