--- a/FRONTEND/photoDrop/src/styles/AllPosts.css
+++ b/FRONTEND/photoDrop/src/styles/AllPosts.css
@@ -7,7 +7,8 @@ main {
     background-color: var(--background-color);
 }
 
-.cargando{
+
+.cargando {
     margin-top: 100%;
 }
 
@@ -15,5 +16,14 @@ main {
     main {
         grid-column: 2/3;
         grid-row: 2/3;
+    }
+
+    .Page {
+        width: 70%;
+        margin-left: 15%;
+    }
+    
+    .cargando {
+        margin-top: 30%;
     }
 }
