--- a/FRONTEND/photoDrop/src/styles/PostCard.css
+++ b/FRONTEND/photoDrop/src/styles/PostCard.css
@@ -111,6 +111,10 @@ section {
     section {
         width: 50%;
     }
+
+    .postUser {
+        gap: 3rem;
+    }
 }
 
 @media (min-height: 1000px) {
