--- a/FRONTEND/photoDrop/src/styles/PostCard.css
+++ b/FRONTEND/photoDrop/src/styles/PostCard.css
@@ -1,4 +1,5 @@
 section {
+    position:relative;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -65,6 +66,7 @@ section {
 }
 
 .postComments {
+    cursor: pointer;
     width: 100%;
     font-size: 12px;
     padding: 0.5rem 1rem;
@@ -78,6 +80,19 @@ section {
     font-size: 10px;
     text-align: end;
     color: grey;
+}
+
+.modal-comentarios{
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
+    border-radius:10px;
+    position:absolute;
+    z-index: 10;
+    bottom:5px;
+    left:15px;
+    width:15rem;
+    height:17rem;
+    overflow-y: scroll;
 }
 
 @media (min-width: 700px) {
