--- a/FRONTEND/photoDrop/src/index.css
+++ b/FRONTEND/photoDrop/src/index.css
@@ -32,6 +32,14 @@ img {
     display: block;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+.hidden{
+    display:none;
+}
+
 @media (min-width: 900px) {
     #root {
         grid-template-columns: 6vh calc(100vw - 6vh);
