--- a/FRONTEND/photoDrop/src/styles/Comment.css
+++ b/FRONTEND/photoDrop/src/styles/Comment.css
@@ -1,4 +1,5 @@
 .comment{
+    position:relative;
     display:flex;
     flex-direction: column;
     gap:0.5rem;
@@ -9,7 +10,15 @@
     display: flex;
     gap:0.5rem;
     align-items: center;
+    justify-content: space-between;
 }
+
+.div1{
+    display:flex;
+    align-items: center;
+    gap:0.5rem;
+}
+
 
 .commentUser > p {
     font-style: italic;
