--- a/FRONTEND/photoDrop/src/styles/Register.css
+++ b/FRONTEND/photoDrop/src/styles/Register.css
@@ -1,11 +1,3 @@
-.main {
-    background-color: var(--background-color);
-    grid-row: 2/4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 main a {
     color: grey;
     text-decoration: none;
@@ -17,27 +9,14 @@ main a {
     padding: 10px;
 }
 
-.cajetin {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
-        0 8px 10px -6px rgb(0 0 0 / 0.1);
-    padding: 10px;
-    gap: 0.4rem;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
-}
-
 .label {
     padding: 5px;
+}
+
+.div-checkbox > input {
+    width: 13px;
+}
+
+.log {
+    text-align: center;
 }
