--- a/FRONTEND/photoDrop/src/styles/Register.css
+++ b/FRONTEND/photoDrop/src/styles/Register.css
@@ -4,6 +4,32 @@ main a {
     font-style: italic;
 }
 
+.container-register {
+    background-color: var(--background-color);
+    grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 0.5rem;
+}
+
+.cajetin-register {
+    width: 80%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.4rem;
+    padding: 1rem;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
+}
+
 .titulo {
     font-size: 2rem;
     padding: 10px;
