--- a/FRONTEND/photoDrop/src/styles/Login.css
+++ b/FRONTEND/photoDrop/src/styles/Login.css
@@ -22,6 +22,21 @@
     border-radius: 10px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
         0 8px 10px -6px rgb(0 0 0 / 0.1);
+    position: relative;
+}
+
+.errormsg {
+    position: absolute;
+    bottom: -4.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
+    padding: 10px;
+    text-align: center;
+    background-color: var(--background-color);
+    color: rgb(192, 77, 77);
+
 }
 
 .login {
