--- a/FRONTEND/photoDrop/src/styles/Register.css
+++ b/FRONTEND/photoDrop/src/styles/Register.css
@@ -28,6 +28,7 @@ main a {
     border-radius: 10px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
         0 8px 10px -6px rgb(0 0 0 / 0.1);
+    position: relative;
 }
 
 .titulo {
