--- a/FRONTEND/photoDrop/src/styles/Comment.css
+++ b/FRONTEND/photoDrop/src/styles/Comment.css
@@ -17,6 +17,16 @@
     display:flex;
     align-items: center;
     gap:0.5rem;
+    width: 100%;
+}
+
+.div1 form {
+    width: 100%;
+}
+
+.div1  textarea {
+    width: 80%;
+
 }
 
 
