--- a/FRONTEND/photoDrop/src/styles/Profile.css
+++ b/FRONTEND/photoDrop/src/styles/Profile.css
@@ -16,6 +16,7 @@
     align-items: center;
     gap: 1rem;
     padding: 1rem;
+    position:relative;
 }
 
 .profileUserName{
@@ -27,6 +28,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .profileIcons {
@@ -44,7 +46,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: start;
-    justify-content: space-between;
+    justify-content: start;
     gap: 0.5rem;
 }
 
