--- a/FRONTEND/photoDrop/src/styles/EditCommentModal.css
+++ b/FRONTEND/photoDrop/src/styles/EditCommentModal.css
@@ -7,12 +7,19 @@
     right:0;
     top:0;
     padding:0.5rem;
+    
 }
 
 .editCommentModal{
+   width: 100%;  
+   height: 100%;
    display:flex;
    flex-direction: column;
-   gap:1rem;
+   gap:1.5rem;
+}
+
+.editCommentModal > p {
+    height: 5%;
 }
 
 .editCommentModal > div{
@@ -21,5 +28,23 @@
 }
 
 textarea {
+    width: 100%;
     resize: none;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    padding:0.2rem;
+}
+
+.editCommentForm{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:0.3rem;
+}
+
+.editCommentForm button{
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    padding:0.2rem;
 }
