--- a/FRONTEND/photoDrop/src/styles/Menu.css
+++ b/FRONTEND/photoDrop/src/styles/Menu.css
@@ -11,7 +11,7 @@
     position:absolute;
     top:0px;
     right:25px;
-    z-index: 10;
+    z-index: 1;
     background-color:var(--background-color);
     border: 1px solid var(--border-color);
     border-radius:10px;
@@ -21,11 +21,16 @@
     font-style: italic;
 }
 
+
 .post-modal-div{
     display: flex;
     align-items: center;
     justify-content: center;
     gap:0.5rem;
+}
+
+.editarBorrar{
+    color:black;
 }
 
 
