--- a/FRONTEND/photoDrop/src/styles/Profile.css
+++ b/FRONTEND/photoDrop/src/styles/Profile.css
@@ -1,12 +1,26 @@
+.profilePage {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
 .profilePageUser {
     width: 100%;
     height: 20%;
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    gap: 8vw;
+}
+
+.postProfileContainer {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:1rem;
 }
 
 .profileUserData {
@@ -16,11 +30,13 @@
     align-items: center;
     gap: 1rem;
     padding: 1rem;
-    position:relative;
+    position: relative;
+    border-bottom: 1px solid var(--border-color);
 }
 
-.profileUserName{
+.profileUserName {
     font-weight: 400;
+    color: grey;
     font-style: italic;
 }
 
@@ -42,7 +58,7 @@
 
 .profilePagePosts {
     width: 90%;
-    height: 80%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     align-content: start;
@@ -50,6 +66,24 @@
     gap: 0.5rem;
 }
 
+.postProfileTitle {
+    padding-bottom: 1rem;
+    height: 1rem;
+}
+
+.p-publicaciones {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.3rem;
+}
+
+.p2 {
+    color: grey;
+    font-style: italic;
+    font-size: 15px;
+}
 .profilePagePosts img {
     width: 27vw;
     height: 27vw;
@@ -74,6 +108,3 @@
         padding: 1rem 0.5rem;
     }
 }
-
-
-
