edit user y cambios en la api y comentario

--- a/FRONTEND/photoDrop/src/styles/Comment.css
+++ b/FRONTEND/photoDrop/src/styles/Comment.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     gap:0.5rem;
     padding:1rem;
+    border-bottom: 1px solid var(--border-color);
 }
 
 .commentUser{
