--- a/FRONTEND/photoDrop/src/styles/Select.css
+++ b/FRONTEND/photoDrop/src/styles/Select.css
@@ -1,3 +1,13 @@
 .formSelect {
     width: 100%;
+    border-radius: 10px;
+    padding: 0.2rem;
+    border: 1.8px solid black;
+}
+
+@media (min-width: 390px) {
+    .formSelect {
+        margin: 0.1rem;
+        padding: 0.1rem;
+    }
 }
