--- a/FRONTEND/photoDrop/src/index.css
+++ b/FRONTEND/photoDrop/src/index.css
@@ -38,13 +38,28 @@ img {
     display: none;
 }
 
-.hidden{
-    display:none;
+.hidden {
+    display: none;
+}
+
+.overflowHidden {
+    overflow: hidden;
 }
 
 @media (min-width: 900px) {
     #root {
         grid-template-columns: 10vh calc(100vw - 10vh);
         grid-template-rows: 6vh calc(100vh - 6vh);
+    }
+}
+
+@media (min-height: 900px) {
+    img{
+        max-height: 500px;
+    }
+    .profilePicture {
+        width: 50px;
+        height: 50px;
+        border-radius: 40px;
     }
 }
