--- a/FRONTEND/photoDrop/src/styles/Menu.css
+++ b/FRONTEND/photoDrop/src/styles/Menu.css
@@ -1,40 +1,39 @@
-.menu{
-    position:relative;
+.menu {
+    position: relative;
 }
-.post-modal{
+.post-modal {
+    color: grey;
     width: 150px;
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:0.5rem;
-    position:absolute;
-    top:0px;
-    right:25px;
+    gap: 0.5rem;
+    position: absolute;
+    top: 0px;
+    right: 25px;
     z-index: 1;
-    background-color:var(--background-color);
+    background-color: var(--background-color);
     border: 1px solid var(--border-color);
-    border-radius:10px;
-    padding:1rem 0.5rem;
+    border-radius: 10px;
+    padding: 1rem 0.5rem;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
-    0 8px 10px -6px rgb(0 0 0 / 0.1);
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
     font-style: italic;
 }
 
-
-.post-modal-div{
+.post-modal-div {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:0.5rem;
-    cursor:pointer;
+    gap: 0.5rem;
+    cursor: pointer;
 }
 
-.editarBorrar{
-    color:black;
+.editarBorrar {
+    color: black;
 }
 
-
-.hidden{
-    display:none;
+.hidden {
+    display: none;
 }
