--- a/FRONTEND/photoDrop/src/styles/PostCard.css
+++ b/FRONTEND/photoDrop/src/styles/PostCard.css
@@ -1,5 +1,5 @@
 section {
-    position:relative;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -28,10 +28,10 @@ section {
     gap: 0.5rem;
 }
 
-.nameSurname{
-    display:flex;
+.nameSurname {
+    display: flex;
     align-items: center;
-    gap:0.3rem;
+    gap: 0.3rem;
 }
 
 .userName {
@@ -89,8 +89,14 @@ section {
     color: grey;
 }
 
-.material-symbols-rounded.liked{
-    color:red;
+.material-symbols-rounded.liked {
+    color: red;
+}
+
+@media (min-width: 500px) {
+    section {
+        width: 60vw;
+    }
 }
 
 @media (min-width: 700px) {
@@ -154,7 +160,7 @@ section {
     }
 
     .postComments {
-        font-size: 25px;
+        font-size: 20px;
     }
 
     .postDate {
