--- a/FRONTEND/photoDrop/src/styles/PostDetails.css
+++ b/FRONTEND/photoDrop/src/styles/PostDetails.css
@@ -1,3 +1,12 @@
+div.PageoverflowHidden{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+
 .postDetailsContainer {
     position:relative;
     display: flex;
@@ -5,7 +14,6 @@
     justify-content: space-between;
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
-    width: 100vw;
     margin: 1rem;
     border-radius: 10px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
@@ -19,6 +27,8 @@
     gap: 0.5rem;
     padding: 0 1rem;
     margin-top: 0.5rem;
+    font-style: italic;
+    color:grey;
 }
 
 .pd-first {
@@ -32,6 +42,7 @@
 .pd-userName {
     font-size: 13px;
     font-style: italic;
+    color:grey;
 }
 
 .pd-postTitle {
@@ -84,91 +95,50 @@
     color: grey;
 }
 
-@media (min-width: 700px) {
-    .pd-userName {
-        font-size: 18px;
-    }
-
-    .pd-postTitle {
-        font-size: 18px;
-    }
-
-    .pd-profilePicture {
-        width: 30px;
-        height: 30px;
-    }
-
-    .pd-postDescription {
-        font-size: 15px;
-    }
-
-    .pd-postComments {
-        font-size: 15px;
-    }
-
-    .pd-postDate {
-        font-size: 12px;
+@media (min-width: 500px){
+    .postDetailsContainer{
+        width: 60%;
     }
 }
 
-@media (min-width: 900px) {
-    .postDetailsContainer {
+@media (min-width: 900px){
+    .postDetailsContainer{
         width: 50%;
     }
-
-    .pd-userName{
-        font-size: 15px;
-    }
-
-    .pd-postUser {
-        gap: 3rem;
-    }
-
-    .pd-postDescription{
-        font-size: 12px;
-    }
-
-    .pd-postComments > p {
-        font-size: 12px;
-    }
 }
 
-@media (min-height: 1000px) {
+@media (min-height: 900px){ 
     .postDetailsContainer {
-        width: 70%;
-        margin: 2rem 1rem;
+        height: 100%;
+        width: 90%;
     }
+    
+    .pd-postUser {
+        height: auto;
+    }   
     .pd-userName {
         font-size: 25px;
     }
-
+    
     .pd-postTitle {
+        font-size: 30px;    
+    }
+    
+    .pd-likes,
+    .pd-comments {
         font-size: 25px;
     }
-
-    .pd-profilePicture {
-        width: 50px;
-        height: 50px;
-        border-radius: 40px;
-    }
-
+    
     .pd-postDescription {
-        font-size: 18px;
+        font-size: 20px;;
     }
-
+    
     .pd-postComments {
-        font-size: 25px;
+        font-size: 20px;
     }
-
+    
     .pd-postDate {
-        font-size: 18px;
-    }
-
-    .pd-material-symbols-rounded {
-        font-size: 50px;
-    }
-
-    .pd-count {
-        font-size: 25px;
+        font-size: 20px;
     }
 }
+
