--- a/FRONTEND/photoDrop/src/styles/AddPost.css
+++ b/FRONTEND/photoDrop/src/styles/AddPost.css
@@ -3,7 +3,7 @@
     grid-row: 2/4;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     width: 100%;
     gap: 0.5rem;
@@ -11,9 +11,9 @@
 
 .cajetin-addpost {
     width: 80%;
-    height: 100%;
+    height: 85%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
@@ -24,6 +24,10 @@
         0 8px 10px -6px rgb(0 0 0 / 0.1);
     position: relative;
     margin: 1rem 0;
+}
+
+.addpost-textarea {
+    width: 80%;
 }
 
 .titulo-addpost {
@@ -38,7 +42,7 @@
     align-items: center;
     width: 100%;
     position: relative;
-    gap: 0.5rem;
+    gap: 0.7rem;
 }
 
 .add-post-photo {
@@ -58,8 +62,77 @@
 
 .add-post-img {
     max-height: 8vh;
+    max-width: 50%;
 }
 
 label img {
     max-height: 30px;
+}
+
+.errormsg-addpost {
+    position: absolute;
+    bottom: -3rem;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
+    padding: 10px;
+    text-align: center;
+    background-color: var(--background-color);
+    color: rgb(192, 77, 77);
+
+}
+
+@media (min-width: 600px) {
+    .titulo-addpost {
+        font-size: 2rem;
+    }
+    .imagenes-cargadas {
+        flex-direction: row;
+    }
+
+    .add-post-img {
+        max-height: 70%;
+        max-width: 40%;
+    }
+}
+
+@media (min-width: 900px) {
+    .titulo-addpost {
+        font-size: 2rem;
+    }
+    .imagenes-cargadas {
+        flex-direction: row;
+    }
+
+    .add-post-img {
+        max-height: 60%;
+        max-width: 25%;
+    }
+}
+
+@media (min-height: 1000px) {
+    .titulo-addpost {
+        font-size: 3rem;
+    }
+
+    .addpost-textarea{
+        font-size: 25px;
+        border: 2px solid var(--border-color);
+    }
+
+    .form-addpost {
+       height: 100%;
+    }
+    .imagenes-cargadas {
+        flex-direction: row;
+    }
+    .add-post-img {
+        max-height: 80%;
+        max-width: 40%;
+    }
+
+    label img {
+        max-height: 70px;
+    }
 }
