--- a/FRONTEND/photoDrop/src/styles/EditUser.css
+++ b/FRONTEND/photoDrop/src/styles/EditUser.css
@@ -56,3 +56,12 @@
 .editTitle {
     font-size: 1.5rem;
 }
+
+.formSelect-editUser{
+    width: 80%;
+    height: 13%;
+    border: 2px solid var(black);
+    border-radius: 10px;
+    font-size: 13px;
+    padding: 0.3rem;
+}
