--- a/FRONTEND/photoDrop/src/styles/EditPost.css
+++ b/FRONTEND/photoDrop/src/styles/EditPost.css
@@ -3,26 +3,28 @@
     height: 85%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border: 1px solid var(--border-color);
     border-radius: 10px;
     gap: 1rem;
     position: relative;
     bottom: 1rem;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 .encabezado {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
 }
 
 .encabezado .material-symbols-rounded {
+    width: 100%;
     position: absolute;
-    top: 0;
-    left: -3rem;
+    left: 5px;
+    top: 15px;
 }
 
 .form-editpost {
@@ -32,7 +34,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position:relative;
+    position: relative;
 }
 
 .encabezado h2 {
@@ -69,4 +71,60 @@
     text-align: center;
     background-color: var(--background-color);
     color: rgb(192, 77, 77);
+}
+
+@media (min-width: 600px) {
+    .edit-imagenes-cargadas {
+        flex-direction: row;
+    }
+
+    .edit-post-img {
+        max-height: 70%;
+        max-width: 40%;
+    }
+}
+
+@media (min-width: 900px) {
+    .encabezado h2 {
+        font-size: 3rem;
+    }
+
+    .edit-imagenes-cargadas {
+        flex-direction: row;
+    }
+
+    .edit-post-img {
+        max-height: 60%;
+        max-width: 25%;
+    }
+
+    .editpost-textarea {
+        font-size: 20px;
+    }
+}
+
+@media (min-height: 1000px) {
+    .editpost-textarea {
+        font-size: 25px;
+        border: 2px solid var(--border-color);
+    }
+
+    .form-editpost {
+        height: 100%;
+    }
+    .edit-imagenes-cargadas {
+        flex-direction: row;
+    }
+    .edit-post-img {
+        max-height: 80%;
+        max-width: 40%;
+    }
+
+    label img {
+        max-height: 70px;
+    }
+
+    .editpost-textarea {
+        font-size: 25px;
+    }
 }
