--- a/FRONTEND/photoDrop/src/styles/CommentsModal.css
+++ b/FRONTEND/photoDrop/src/styles/CommentsModal.css
@@ -1,3 +1,12 @@
+@keyframes move {
+    0% {
+        transform: translateY(100%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
 .modal-comentarios {
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
@@ -12,11 +21,15 @@
     overflow-x: hidden;
 }
 
-.modal-comentarios > p{
+.modal-comentarios.visible {
+    animation: move 1s;
+}
+
+.modal-comentarios > p {
     text-align: center;
 }
 
-.modal-comentarios .material-symbols-rounded{
+.modal-comentarios .material-symbols-rounded {
     width: 100%;
     text-align: end;
 }
@@ -25,23 +38,23 @@
     height: auto;
     position: sticky;
     z-index: 10;
-    top:0px;
+    top: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
     padding: 0.7rem;
-    gap:0.5rem;
+    gap: 0.5rem;
 }
 
 .addComment input {
-    width:70%;
-    font-size: 12px;;
+    width: 70%;
+    font-size: 12px;
 }
 
-.addComment button{
+.addComment button {
     width: 20px;
     height: 20px;
-    border-radius: 40px ;
+    border-radius: 40px;
 }
