--- a/FRONTEND/photoDrop/src/styles/NotFound.css
+++ b/FRONTEND/photoDrop/src/styles/NotFound.css
@@ -1,11 +1,28 @@
-.nf-container{
+.notFound{
+    width: 100%;
+    height: 40%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    top: 12rem;
+}
+
+.nf-container {
     width: 90%;
     height: 90%;
     border: 1px solid var(--border-color);
+    border-radius: 10px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
         0 8px 10px -6px rgb(0 0 0 / 0.1);
-        display:flex;
-        justify-content: center;
-        align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
 
+.nf-container p {
+    text-align: center;
 }
