--- a/FRONTEND/photoDrop/src/styles/EditUser.css
+++ b/FRONTEND/photoDrop/src/styles/EditUser.css
@@ -65,3 +65,15 @@
     font-size: 13px;
     padding: 0.3rem;
 }
+
+@media (min-width: 900px) {
+    .edit-cajetin {
+        width: 40%;
+        height: 600px;
+    }
+
+    .editTitle{
+        font-size: 2.5rem;
+    }
+    
+}
