--- a/FRONTEND/photoDrop/src/styles/PostCard.css
+++ b/FRONTEND/photoDrop/src/styles/PostCard.css
@@ -125,7 +125,8 @@ section {
 
 @media (min-width: 900px) {
     section {
-        width: 50%;
+        width: 30%;
+        height: 100%;
     }
 
     .postUser {
@@ -134,6 +135,11 @@ section {
 }
 
 @media (min-height: 1000px) {
+    section {
+        width: 30%;
+        height: 100%;
+    }
+    
     section {
         width: 50%;
         margin: 2rem 1rem;
