--- a/FRONTEND/photoDrop/src/styles/Profile.css
+++ b/FRONTEND/photoDrop/src/styles/Profile.css
@@ -61,9 +61,9 @@
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    align-content: start;
-    justify-content: start;
-    gap: 0.5rem;
+    align-content: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .postProfileTitle {
@@ -71,7 +71,7 @@
     height: 1rem;
 }
 
-.p-publicaciones {
+.p-publicaciones {  
     display: flex;
     flex-direction: column;
     justify-content: center;
